--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 	<artifactId>backend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>backend</name>
+	<packaging>war</packaging>
 	<description> Entretien Mentor est une plateforme pour aider les candidats à se préparer aux entretiens d&apos;emploi et à bénéficier d&apos;une communauté de soutien</description>
 
 	<properties>
@@ -48,6 +49,11 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
