--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,22 +2,13 @@ spring.application.name=backend
 repository.filePath=user.txt
 server.port=8989
 server.servlet.context-path=/em
-#spring.web.resources.staticLocations=file:src/main/resources/static/
 spring.web.locale-resolver=fixed
 spring.web.locale=us_US
-#spring.datasource.url=jdbc:mysql://localhost:3306/em_back_db?allowPublicKeyRetrieval=true&useSSL=false
-#spring.datasource.username=root
-#spring.datasource.password=Fatou@1406
 spring.datasource.url=jdbc:postgresql://localhost:5432/em_backend_db
 spring.datasource.username=em_db_user
 spring.datasource.password=@em_db_server.20.24.15
-#spring.jpa.hibernate.ddl-auto=<create | create-drop | update | validate | none>
 spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
-spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.generate-ddl=true
 spring.jpa.generate-ddl=true
-#spring.datasource.initialization-mode=always
+spring.main.allow-circular-references=true
