Fix error: In progress

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,13 +4,50 @@ server.port=8989
 server.servlet.context-path=/em
 spring.web.locale-resolver=fixed
 spring.web.locale=us_US
+
+#spring.security.user.name=admin
+#spring.security.user.password=admin
+
+#db config
+#spring.datasource.url=jdbc:postgresql://localhost:5432/em_backend_db
+#spring.datasource.username=em_db_user
+#spring.datasource.password=@em_db_server.20.24.15
+
+#db config for deployment on server
 spring.datasource.url=jdbc:postgresql://localhost:5432/em_backend_db
 spring.datasource.username=em_db_user
 spring.datasource.password=@em_db_server.20.24.15
+
+
+#ORM s/w specific properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.generate-ddl=true
 spring.main.allow-circular-references=true
-#spring.security.user.name=admin
-#spring.security.user.password=admin
+
+#For Spring Boot 3.x
+#spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+
+#debug logs
+logging.level.org.springframework.security=debug
+
+#image
+project.image=images/
+#spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+#JWT Security Key
+jwt_secret=cl$ksc^nas%lkdm!cz@xclk#as&dmka;s28*392da%jskd#n9827@3498%
+
+#Swagger OpenAPI
+#For sorting endpoints alphabetically
+springdoc.swagger-ui.operationsSorter=alpha
+
+#For sorting tags alphabetically
+springdoc.swagger-ui.tagsSorter=alpha
+
+#to remove doc expansion
+springdoc.swagger-ui.doc-expansion=false
