--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,3 +51,6 @@ springdoc.swagger-ui.tagsSorter=alpha
 
 #to remove doc expansion
 springdoc.swagger-ui.doc-expansion=false
+
+spring.devtools.add-properties=false
+logging.level.web=DEBUG
