--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,10 +13,16 @@ spring.web.locale=us_US
 #spring.datasource.username=em_db_user
 #spring.datasource.password=@em_db_server.20.24.15
 
+
 #db config for deployment on server
-spring.datasource.url=jdbc:postgresql://localhost:5432/em_backend_db
-spring.datasource.username=em_db_user
-spring.datasource.password=@em_db_server.20.24.15
+#spring.datasource.url=jdbc:postgresql://localhost:5432/em_backend_db
+#spring.datasource.username=em_db_user
+#spring.datasource.password=@em_db_server.20.24.15
+
+spring.datasource.url=jdbc:mysql://localhost:3306/em_backend_db
+spring.datasource.username=devskill_user
+spring.datasource.password=devskill@db.
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
 #ORM s/w specific properties
